feat(project-member): implement role-based access control for project members
- Add role-based authorization checks for project member operations
- Implement ADMIN role requirement for member management endpoints
- Add MEMBER role requirement for viewing project members
- Add proper error handling for unauthorized access
- Update endpoint paths to follow REST conventions
- Add comprehensive documentation for all endpoints
- Implement proper request/response DTOs for member operations
- Add validation for project member creation and updates